fixed positioning of projects on mobile

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -65,6 +65,9 @@
         padding-left: 0px;
         padding-right: 0px;
     }
+    .projectsmain {
+        padding-top: 700px;
+    }
 }
 @media (max-width: 500px){
     .projectboxblockone {
